testing reload speed

--- a/index.html
+++ b/index.html
@@ -1,13 +1,103 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>My GitHub Website</title>
+    <meta charset="UTF-8">
+    <title>John Nguyen</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Welcome to My GitHub Website!</h1>
-    <p>This is a simple static site hosted on GitHub Pages.</p>
+    <div class="me">
+        <h1>John Nguyen</h1>
+        <div class="education">
+            <span>education</span>
+            <ul>
+                <span>cypress creek high school</span>
+                <li><span>aug 2017 - may 2021</span></li>
+                <li><span>gpa: 6.7/7.0<span></li>
+                <span>university of houston</span>
+                <li><span>aug 2021 - may 2025<span></li>
+                <li><span>gpa: 3.8/4.0<span></li>
+            </ul>
+        </div>
+
+        <!----------------------->
+
+        <div class="projects">
+            <span>projects</span>
+            <ul>
+                <span>
+                    ascension <a href="https://github.com/reneyugnjohn/Ascension">github</a>
+                </span>
+                <br>
+                <span>
+                    website portfolio <a href="https://github.com/reneyugnjohn/portfolio">github</a>
+                </span>
+            </ul>
+        </div>
+
+        <!----------------------->
+
+        <div class="organizations">
+            <span>organizations</span>
+            <ul>
+                <span>code[coogs]</span>
+                <li><span>aug 2022 - present | member</span></li>
+                <span>cougarcs</span>
+                <li><span>aug 2023 - present | member</span></li>
+                <span>tri-m music honor society</span>
+                <li><span>aug 2018 - june 2020 | member</span></li>
+                <li><span>aug 2020 - june 2021 | librarian</span></li>
+            </ul>
+        </div>
+
+        <!----------------------->
+
+        <!----------------------->
+
+        <div class="skills">
+            <span>skills</span>
+            <ul>
+                <span>languages</span>
+                <li><span>english and vietnamese</span></li>
+                <li><span>python, c++, c#, java, javascript, html/css, react, flask, typescript, tailwind, sql</span>
+                </li>
+                <span>developer tools</span>
+                <li><span>visual studio, unity, aesprite</span></li>
+            </ul>
+        </div>
+
+        <!----------------------->
+
+        <div class="socials">
+            <span>socials</span>
+            <ul>
+                <span>
+                    linkedin: <a href="https://www.linkedin.com/in/itsjohnnguyen/">itsjohnnguyen</a>
+                </span>
+                <br>
+                <span>
+                    github: <a href="https://github.com/reneyugnjohn">reneyugnjohn</a>
+                </span>
+                <br>
+                <span>
+                    instagram: <a href="https://www.instagram.com/john_nguyyenn/">john_nguyyenn</a>
+                </span>
+                <br>
+                <span>
+                    email: <a href="mailto: johnnguyen1820@gmail.com">johnnguyen1820@gmail.com</a>
+                </span>
+                <br>
+                <span>
+                    resume: <a href="Nguyen_Resume.pdf" download="Nguyen_Resume">Nguyen_Resume</a>
+                </span>
+            </ul>
+        </div>
+    </div>
 </body>
 
 </html>
